define railtie to manage configuration for Rails
Change-Id: I1f33534465c66f4d2e0757ba5b3578433129a841
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/142853
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ require:
 AllCops:
   TargetRubyVersion: 2.5
   NewCops: enable
+  SuggestExtensions: false
   Exclude:
     - 'vendor/**/*'
     # Copied from Rails v6.1.0-38-gbf165e3e19
@@ -20,6 +21,9 @@ Metrics/ParameterLists:
 
 Layout/LineLength:
   Max: 140
+
+Metrics/BlockNesting:
+  Max: 4
 
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
