explicitly specify connection string for github actions
Change-Id: Ibc800fa149f850c7bd023794d46f90e82d8d4d0a
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/143333
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
         env:
           DEVELOPER_PREVIEW: yes
           TEST_SERVER_VERSION: 6.6.0
+          TEST_CONNECTION_STRING: couchbase://127.0.0.1
         run: |
           ulimit -c unlimited
           bundle exec rake test
@@ -93,6 +94,7 @@ jobs:
           bundle exec rake test
         env:
           TEST_SERVER_VERSION: 6.0.3
+          TEST_CONNECTION_STRING: couchbase://127.0.0.1
       - name: Display core dumps
         if: ${{ failure() }}
         run: |
@@ -145,6 +147,7 @@ jobs:
         env:
           DEVELOPER_PREVIEW: yes
           TEST_SERVER_VERSION: 6.5.1
+          TEST_CONNECTION_STRING: couchbase://127.0.0.1
       - name: Display core dumps
         if: ${{ failure() }}
         run: |
