add example for user management
Change-Id: Icf57608b83a4747f5de16a519729c03241ff1b1f
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/143722
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,8 +31,8 @@ Layout/SpaceInsideHashLiteralBraces:
 
 Style/Copyright:
   Enabled: true
-  Notice: 'Copyright .*2020 Couchbase, Inc.'
-  AutocorrectNotice: 'Copyright 2020 Couchbase, Inc.'
+  Notice: 'Copyright .*\d{4} Couchbase, Inc.'
+  AutocorrectNotice: '#   Copyright 2021 Couchbase, Inc.'
 
 Style/Lambda:
   EnforcedStyle: lambda
