use -fdeclspec for clang compilers
fixes build with ruby 3.0 on MacOS

Change-Id: I170a171a242e70651e01e5f125621350910b0c22
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/144969
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -6,6 +6,9 @@ include(cmake/StandardProjectSettings.cmake)
 # 'library' to set the c++ standard / compile-time options requested
 add_library(project_options INTERFACE)
 target_compile_features(project_options INTERFACE cxx_std_17)
+if(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
+  target_compile_options(project_options INTERFACE -fdeclspec)
+endif()
 
 # 'library' to use the warnings specified in CompilerWarnings.cmake
 add_library(project_warnings INTERFACE)
