github actions: update APT before installing packages
Change-Id: I4abc442a69a391480379721759b66a2200208457
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/145054
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -27,7 +27,9 @@ jobs:
         with:
           fetch-depth: 2
       - name: Install dependencies
-        run: sudo apt-get install -y clang-format
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y clang-format
       - name: Run clang-format
         run: ./bin/check-clang-format
 
