fix/silence clang-tidy offences
Change-Id: I4090de71714b5eeb0437e2e257ee7451812821f0
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/149062
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -95,9 +95,11 @@ else()
   message(STATUS "RUBY_VERSION: ${RUBY_VERSION}")
   message(STATUS "RUBY_EXECUTABLE: ${RUBY_EXECUTABLE}")
 endif()
-message(STATUS "RUBY_INCLUDE_DIR: ${RUBY_INCLUDE_DIR}")
 message(STATUS "RUBY_LIBRARY: ${RUBY_LIBRARY}")
-include_directories(BEFORE SYSTEM "${RUBY_INCLUDE_DIR}")
+if(RUBY_INCLUDE_DIR)
+  message(STATUS "RUBY_INCLUDE_DIR: ${RUBY_INCLUDE_DIR}")
+  include_directories(BEFORE SYSTEM "${RUBY_INCLUDE_DIR}")
+endif()
 
 add_library(couchbase SHARED couchbase/couchbase.cxx)
 target_include_directories(couchbase PRIVATE ${PROJECT_BINARY_DIR}/generated)
