RCBC-228: update analytics management API to support compound names
Change-Id: I800be642951be1a7911d900ef55dc5c028fbe8ca
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/156339
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -71,7 +71,7 @@ add_library(
 target_include_directories(platform PRIVATE ${PROJECT_BINARY_DIR}/generated)
 target_link_libraries(platform PRIVATE ${PLATFORM_LIBRARIES})
 
-add_library(cbcrypto OBJECT couchbase/cbcrypto/cbcrypto.cc)
+add_library(cbcrypto OBJECT couchbase/cbcrypto/cbcrypto.cc couchbase/utils/name_codec.hxx)
 target_link_libraries(
   cbcrypto
   PRIVATE project_options
