RCBC-234: implement tracing
Change-Id: Id0507f86bb358578848ae3f35dbae6472a4243ed
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/158624
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/test/CMakeLists.txt
+++ b/ext/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 ruby_test(trivial_crud)
 ruby_test(trivial_query)
 native_test(trivial_crud)
+native_test(trivial_query)
 native_test(diagnostics)
 native_test(binary_operations)
