RCBC-234: implement metrics
Change-Id: I94fa998a41917790e887a887b5f3f757d616998b
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/158625
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "ext/third_party/catch2"]
 	path = ext/third_party/catch2
 	url = git://github.com/catchorg/Catch2.git
+[submodule "ext/third_party/hdr_histogram_c"]
+	path = ext/third_party/hdr_histogram_c
+	url = git://github.com/HdrHistogram/HdrHistogram_c.git
