fix rubocop offences
Change-Id: I89a92f94346a5896a54e736c564d293af912073b
Reviewed-on: https://review.couchbase.org/c/couchbase-ruby-client/+/168665
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
   SuggestExtensions: false
   Exclude:
     - 'vendor/**/*'
+    - 'ext/**/*'
     # Copied from Rails v6.1.0-38-gbf165e3e19
     - 'test/active_support/behaviors/*.rb'
     - 'test/active_support/behaviors.rb'
