update core 8099406 -> d648baf
Change-Id: I7752a46b00340c04811e1a7079ce9b5f3b0fb4f6
Reviewed-on: https://review.couchbase.org/c/couchbase-ruby-client/+/170966
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: David Kelly <davidmichaelkelly@gmail.com>
Tested-by: David Kelly <davidmichaelkelly@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "test_data/sdk_test_cases"]
 	path = test_data/sdk_test_cases
-	url = git://github.com/couchbaselabs/sdk-testcases.git
+	url = https://github.com/couchbaselabs/sdk-testcases.git
 [submodule "ext/couchbase"]
 	path = ext/couchbase
-	url = git://github.com/couchbaselabs/couchbase-cxx-client.git
+	url = https://github.com/couchbaselabs/couchbase-cxx-client.git
