--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -25,6 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          submodules: recursive
           fetch-depth: 2
       - name: Install dependencies
         run: |
