--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,11 +7,17 @@ on:
     branches: [ main ]
 
 jobs:
-  mad_hatter:
+  test:
+    strategy:
+      matrix:
+        server:
+          - 7.1.0
+          - 7.0.3
+          - 6.6.5
     runs-on: ubuntu-20.04
     services:
       couchbase:
-        image: couchbase:enterprise-6.6.2
+        image: couchbase:enterprise-${{ matrix.server }}
         ports:
           - 8091-8095:8091-8095
           - 11210:11210
@@ -41,119 +47,11 @@ jobs:
       - name: Run tests
         timeout-minutes: 15
         env:
-          DEVELOPER_PREVIEW: yes
-          TEST_SERVER_VERSION: 6.6.2
+          TEST_SERVER_VERSION: ${{ matrix.server }}
           TEST_CONNECTION_STRING: couchbase://127.0.0.1
         run: |
           ulimit -c unlimited
           bundle exec rake test
-      - name: Display core dumps
-        if: ${{ failure() }}
-        run: |
-          for i in /tmp/core*
-          do
-             if [ -f $i ]
-             then
-               echo $i
-               file $i
-               gdb $(bundle exec which ruby) $i --batch -ex "thread apply all bt"
-             fi
-          done
-
-  alice:
-    runs-on: ubuntu-20.04
-    services:
-      couchbase:
-        image: couchbase:enterprise-6.0.5
-        ports:
-          - 8091-8095:8091-8095
-          - 11210:11210
-    steps:
-      - name: Configure core dump capturing
-        run: |
-          echo '/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
-      - name: Install build environment
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y libssl-dev cmake gcc g++ curl gdb
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Set up ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-      - name: Install dependencies
-        run: bundle install
-      - name: Initialize couchbase
-        run: ./bin/init-cluster
-      - name: Compile extension
-        run: bundle exec rake compile
-      - name: Check couchbase
-        run: ./bin/check-cluster
-      - name: Run tests
-        timeout-minutes: 15
-        run: |
-          ulimit -c unlimited
-          bundle exec rake test
-        env:
-          TEST_SERVER_VERSION: 6.0.5
-          TEST_CONNECTION_STRING: couchbase://127.0.0.1
-      - name: Display core dumps
-        if: ${{ failure() }}
-        run: |
-          for i in /tmp/core*
-          do
-             if [ -f $i ]
-             then
-               echo $i
-               file $i
-               gdb $(bundle exec which ruby) $i --batch -ex "thread apply all bt"
-             fi
-          done
-
-  mad_hatter-dev:
-    runs-on: ubuntu-20.04
-    services:
-      couchbase:
-        image: couchbase:enterprise-6.6.2
-        ports:
-          - 8091-8095:8091-8095
-          - 11210:11210
-    steps:
-      - name: Configure core dump capturing
-        run: |
-          echo '/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
-      - name: Install build environment
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y libssl-dev cmake gcc g++ curl gdb
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Set up ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-      - name: Install dependencies
-        run: bundle install
-      - name: Initialize couchbase
-        run: ./bin/init-cluster
-        env:
-          DEVELOPER_PREVIEW: yes
-      - name: Compile extension
-        run: bundle exec rake compile
-      - name: Check couchbase
-        run: ./bin/check-cluster
-      - name: Run tests
-        timeout-minutes: 15
-        run: |
-          ulimit -c unlimited
-          bundle exec rake test
-        env:
-          DEVELOPER_PREVIEW: yes
-          TEST_SERVER_VERSION: 6.6.2
-          TEST_CONNECTION_STRING: couchbase://127.0.0.1
       - name: Display core dumps
         if: ${{ failure() }}
         run: |
