Disable rubocop memoized helper number and instance variable warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -54,3 +54,9 @@ Style/TrailingCommaInHashLiteral:
 
 Layout/FirstHashElementIndentation:
   EnforcedStyle: consistent
+
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+
+RSpec/InstanceVariable:
+  Enabled: false
