--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps/stellar-nebula"]
 	path = deps/stellar-nebula
-	url = ../stellar-nebula.git
+	url = https://github.com/couchbase/stellar-nebula.git
