Add more subdoc testing

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -60,3 +60,9 @@ RSpec/MultipleMemoizedHelpers:
 
 RSpec/InstanceVariable:
   Enabled: false
+
+RSpec/LetSetup:
+  Enabled: false
+
+RSpec/MultipleExpectations:
+  Enabled: false
