--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,7 @@ AllCops:
   Exclude:
     - 'vendor/**/*'
     - 'ext/**/*'
+    - 'lib/couchbase/protostellar/generated/**/*'
     # Copied from Rails v6.1.0-38-gbf165e3e19
     - 'test/active_support/behaviors/*.rb'
     - 'test/active_support/behaviors.rb'
