Try to fix package generation for MAcOs Arm64

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -199,7 +199,7 @@ jobs:
 
   build_macos_arm64:
     needs: source
-    runs-on: macos-14
+    runs-on: macos-14-arm64
     strategy:
       fail-fast: false
       matrix:
@@ -237,7 +237,7 @@ jobs:
     needs:
       - source
       - build_macos_arm64
-    runs-on: macos-14
+    runs-on: macos-14-arm64
     steps:
       - uses: actions/download-artifact@v4
         with:
