RCBC-512: Invoke fork hooks to protect SDK internal state

--- a/ext/.gitignore
+++ b/ext/.gitignore
@@ -1,7 +1,7 @@
 /.idea/sonarlint/
 /.idea/editor.xml
 /.idea/workspace.xml
-/build/
+/build*
 /cmake-build-*/
 /cmake-build-report.tar.gz
 /revisions.rb
