--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   rubocop:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
       - name: Set up ruby
@@ -28,7 +28,7 @@ jobs:
           bundle exec rubocop
 
   clang_format:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
         with:
@@ -39,7 +39,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y wget gnupg2 git
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo bash -c "echo 'deb https://apt.llvm.org/focal/ llvm-toolchain-focal-18 main' >> /etc/apt/sources.list"
+          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble-18 main' >> /etc/apt/sources.list"
           sudo apt-get update -y
           sudo apt-get install -y clang-format-18
       - name: Run clang-format
@@ -49,7 +49,7 @@ jobs:
         run: ./bin/check-clang-format
 
   clang_static_analyzer:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
         with:
@@ -63,7 +63,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y libssl-dev cmake curl wget gnupg2
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo bash -c "echo 'deb https://apt.llvm.org/focal/ llvm-toolchain-focal-18 main' >> /etc/apt/sources.list"
+          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble-18 main' >> /etc/apt/sources.list"
           sudo apt-get update -y
           sudo apt-get install -y clang-18 clang-tools-18
       - uses: hendrikmuhs/ccache-action@v1.2
