--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.3
+          ruby-version: 3.4
       - name: Install dependencies
         run: bundle install
       - name: Run rubocop
@@ -39,13 +39,10 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y wget gnupg2 git
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble-18 main' >> /etc/apt/sources.list"
+          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble main' >> /etc/apt/sources.list"
           sudo apt-get update -y
-          sudo apt-get install -y clang-format-18
+          sudo apt-get install -y clang-format
       - name: Run clang-format
-        env:
-          CB_GIT_CLANG_FORMAT: /usr/bin/git-clang-format-18
-          CB_CLANG_FORMAT: /usr/bin/clang-format-18
         run: ./bin/check-clang-format
 
   clang_static_analyzer:
@@ -57,15 +54,15 @@ jobs:
       - name: Set up ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.3
+          ruby-version: 3.4
       - name: Install dependencies
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y libssl-dev cmake curl wget gnupg2
+          sudo apt-get install -y libssl-dev cmake curl wget gnupg2 libcurl4-openssl-dev libprotobuf-dev libgrpc-dev gdb
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble-18 main' >> /etc/apt/sources.list"
+          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble main' >> /etc/apt/sources.list"
           sudo apt-get update -y
-          sudo apt-get install -y clang-18 clang-tools-18
+          sudo apt-get install -y clang clang-tools
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
           max-size: 2G
@@ -73,9 +70,9 @@ jobs:
       - name: Run scan build
         run: ./bin/check-clang-static-analyzer
         env:
-          CB_CC: /usr/bin/clang-18
-          CB_CXX: /usr/bin/clang++-18
-          CB_SCAN_BUILD: /usr/bin/scan-build-18
+          CB_CC: /usr/bin/clang-21
+          CB_CXX: /usr/bin/clang++-21
+          CB_SCAN_BUILD: /usr/bin/scan-build-21
       - name: Upload scan-build report
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
