--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  LLVM_VERSION: 20
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
@@ -38,11 +41,14 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y wget gnupg2 git
-          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble main' >> /etc/apt/sources.list"
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo gpg --dearmor --output /etc/apt/keyrings/llvm-snapshot.gpg
+          sudo bash -c "echo 'deb [signed-by=/etc/apt/keyrings/llvm-snapshot.gpg] https://apt.llvm.org/noble/ llvm-toolchain-noble-${LLVM_VERSION} main' >> /etc/apt/sources.list"
           sudo apt-get update -y
-          sudo apt-get install -y clang-format
+          sudo apt-get install -y clang-format-${LLVM_VERSION}
       - name: Run clang-format
+        env:
+          CB_GIT_CLANG_FORMAT: /usr/bin/git-clang-format-${{ env.LLVM_VERSION }}
+          CB_CLANG_FORMAT: /usr/bin/clang-format-${{ env.LLVM_VERSION }}
         run: ./bin/check-clang-format
 
   clang_static_analyzer:
@@ -59,10 +65,10 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y libssl-dev cmake curl wget gnupg2 libcurl4-openssl-dev libprotobuf-dev libgrpc-dev gdb
-          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo bash -c "echo 'deb https://apt.llvm.org/noble/ llvm-toolchain-noble main' >> /etc/apt/sources.list"
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo gpg --dearmor --output /etc/apt/keyrings/llvm-snapshot.gpg
+          sudo bash -c "echo 'deb [signed-by=/etc/apt/keyrings/llvm-snapshot.gpg] https://apt.llvm.org/noble/ llvm-toolchain-noble-${LLVM_VERSION} main' >> /etc/apt/sources.list"
           sudo apt-get update -y
-          sudo apt-get install -y clang clang-tools
+          sudo apt-get install -y clang-${LLVM_VERSION} clang-tools-${LLVM_VERSION}
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
           max-size: 2G
@@ -70,9 +76,9 @@ jobs:
       - name: Run scan build
         run: ./bin/check-clang-static-analyzer
         env:
-          CB_CC: /usr/bin/clang-21
-          CB_CXX: /usr/bin/clang++-21
-          CB_SCAN_BUILD: /usr/bin/scan-build-21
+          CB_CC: /usr/bin/clang-${{ env.LLVM_VERSION }}
+          CB_CXX: /usr/bin/clang++-${{ env.LLVM_VERSION }}
+          CB_SCAN_BUILD: /usr/bin/scan-build-${{ env.LLVM_VERSION }}
       - name: Upload scan-build report
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
