--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,7 +120,7 @@ jobs:
           name: scripts-${{ needs.source.outputs.gem_version }}
       - name: Install build environment
         env:
-          SUPPORTED_RUBY_VERSIONS: "3.1 3.2 3.3 3.4"
+          SUPPORTED_RUBY_VERSIONS: "3.1 3.2 3.3 3.4 4.0"
         run: |
           bash bin/jenkins/install-rubies.sh
       - uses: actions/download-artifact@v4
@@ -129,7 +129,7 @@ jobs:
           name: couchbase-${{ needs.source.outputs.gem_version }}
       - name: Build gem
         env:
-          SUPPORTED_RUBY_VERSIONS: "3.1 3.2 3.3 3.4"
+          SUPPORTED_RUBY_VERSIONS: "3.1 3.2 3.3 3.4 4.0"
           BUNDLE_ALLOW_ROOT: true
         run: |
           bash bin/jenkins/build-gem.sh
@@ -150,6 +150,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -201,9 +202,13 @@ jobs:
         with:
           path: pkg/binary/3.4
           name: couchbase-${{ needs.source.outputs.gem_version }}-x86_64-linux-3.4
+      - uses: actions/download-artifact@v4
+        with:
+          path: pkg/binary/4.0
+          name: couchbase-${{ needs.source.outputs.gem_version }}-x86_64-linux-4.0
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.4
+          ruby-version: 4.0
       - name: Repackage
         run: |
           ruby bin/jenkins/repackage-extension.rb
@@ -224,6 +229,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -275,9 +281,13 @@ jobs:
         with:
           path: pkg/binary/3.4
           name: couchbase-${{ needs.source.outputs.gem_version }}-aarch64-linux-3.4
+      - uses: actions/download-artifact@v4
+        with:
+          path: pkg/binary/4.0
+          name: couchbase-${{ needs.source.outputs.gem_version }}-aarch64-linux-4.0
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.4
+          ruby-version: 4.0
       - name: Repackage
         run: |
           ruby bin/jenkins/repackage-extension.rb
@@ -298,6 +308,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -349,9 +360,13 @@ jobs:
         with:
           path: pkg/binary/3.4
           name: couchbase-${{ needs.source.outputs.gem_version }}-arm64-darwin-3.4
+      - uses: actions/download-artifact@v4
+        with:
+          path: pkg/binary/4.0
+          name: couchbase-${{ needs.source.outputs.gem_version }}-arm64-darwin-4.0
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.4
+          ruby-version: 4.0
       - name: Repackage
         run: |
           ruby bin/jenkins/repackage-extension.rb
@@ -372,6 +387,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -423,9 +439,13 @@ jobs:
         with:
           path: pkg/binary/3.4
           name: couchbase-${{ needs.source.outputs.gem_version }}-x86_64-darwin-3.4
+      - uses: actions/download-artifact@v4
+        with:
+          path: pkg/binary/4.0
+          name: couchbase-${{ needs.source.outputs.gem_version }}-x86_64-darwin-4.0
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.4
+          ruby-version: 4.0
       - name: Repackage
         run: |
           ruby bin/jenkins/repackage-extension.rb
@@ -449,6 +469,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -510,6 +531,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -574,6 +596,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -732,6 +755,7 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
+          - '4.0'
     steps:
       - uses: ruby/setup-ruby@v1
         with:
@@ -782,9 +806,13 @@ jobs:
         with:
           path: pkg/binary/3.4
           name: couchbase-${{ needs.source.outputs.gem_version }}-x64-mingw-3.4
+      - uses: actions/download-artifact@v4
+        with:
+          path: pkg/binary/4.0
+          name: couchbase-${{ needs.source.outputs.gem_version }}-x64-mingw-4.0
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.4
+          ruby-version: 4.0
       - name: Repackage
         run: |
           ruby bin/jenkins/repackage-extension.rb
@@ -817,6 +845,7 @@ jobs:
   #         - '3.2'
   #         - '3.3'
   #         - '3.4'
+  #         - '4.0'
   #   steps:
   #     - uses: actions/download-artifact@v4
   #       with:
