--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -367,7 +367,7 @@ jobs:
 
   build_macos_x86_64:
     needs: source
-    runs-on: macos-13
+    runs-on: macos-15-intel
     strategy:
       fail-fast: false
       matrix:
@@ -406,7 +406,7 @@ jobs:
     needs:
       - source
       - build_macos_x86_64
-    runs-on: macos-13
+    runs-on: macos-15-intel
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -569,7 +569,7 @@ jobs:
     needs:
       - source
       - repackage_macos_x86_64
-    runs-on: macos-13
+    runs-on: macos-15-intel
     strategy:
       fail-fast: false
       matrix:
