--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,9 +3,13 @@ permissions: {}
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - release*
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - release*
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
